--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>CarsApp</title>
-  <base href="/cars-hw">
+  <base href="/cars-hw/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <style>*{padding:0;margin:0}@font-face{font-family:Roboto;src:url(Roboto.3d305e3241f69eb1.ttf)}@font-face{font-family:Roboto;src:url(Robotobold.6262c49945b78f15.ttf);font-weight:700}body{font-family:Roboto,sans-serif;color:#030305}</style><link rel="stylesheet" href="/cars-hw/styles.9845c6f1aa353878.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="/cars-hw/styles.9845c6f1aa353878.css"></noscript></head>
